# import-deps

./: .gitignore  CHANGES  README.md  dodo.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: test.yml
import_deps/: __init__.py  __main__.py
tests/: test_import_deps.py
